Fixed achievements, backdrop on menu, projects page partition, contact spacing

--- a/css/floating-btn.css
+++ b/css/floating-btn.css
@@ -8,7 +8,7 @@
   color: #fff;
   border-radius: 50px;
   text-align: center;
-  box-shadow: 2px 2px 3px #999;
+  box-shadow: 2px 2px 3px #99999986;
 }
 
 .my-float {
